bug fix: dashboard top items clipped on mobile devices -> css update'

--- a/frontend/src/app/features/dashboard/pages/dashboard/dashboard.component.scss
+++ b/frontend/src/app/features/dashboard/pages/dashboard/dashboard.component.scss
@@ -2,48 +2,58 @@ $boxSize: 16rem;
 
 .page {
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  .cont {
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    height: 100%;
-    max-width: calc(4 * 16rem + 10rem);
-    margin: 0 auto;
-
-    .box{
-      width: $boxSize;
-      height: $boxSize;
-      margin: 1rem;
-      text-decoration: none !important;
-
+  .scroll {
+    max-height: 100%;
+    overflow: auto;
+    overflow: visible;
+  
+    .cont {
       display: flex;
-      flex-direction: column;
       justify-content: center;
-      align-items: center;
+      flex-wrap: wrap;
+      height: 100%;
+      max-width: calc(4 * 16rem + 10rem);
+      margin: 1.5rem auto;
 
-      .fas {
-        color: var(--mainColor1);
-        font-size: 4rem;
-        margin: 0.5rem;
+
+      .box{
+        width: $boxSize;
+        height: $boxSize;
+        margin: 1rem;
+        text-decoration: none !important;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .fas {
+          color: var(--mainColor1);
+          font-size: 4rem;
+          margin: 0.5rem;
+        }
+
+        .link-text {
+          font-size: x-large;
+          font-weight: 500;
+          margin: 0.5rem;
+        }
+      }
+      
+      .box:hover,
+      .box:active {
+        transform: scale(1.05);
+        cursor: pointer;
+        box-shadow: 0px 0px 30px 3px rgba(76,175,79,1);
+        outline: none;
       }
 
-      .link-text {
-        font-size: x-large;
-        font-weight: 500;
-        margin: 0.5rem;
-      }
-    }
-    
-    .box:hover,
-    .box:active {
-      transform: scale(1.05);
-      cursor: pointer;
-      box-shadow: 0px 0px 30px 3px rgba(76,175,79,1);
-      outline: none;
     }
 
-  }
+}
 
 }
